fix errors causing the app not to work

--- a/app/views/contributors/show.html.erb
+++ b/app/views/contributors/show.html.erb
@@ -1,6 +1,6 @@
-<h1><% @contributor.title %></h1>
+<h1><%= @contributor.title %></h1>
 
-<p><% @contributor.recipe %></p>
+<p><%= @contributor.recipe %></p>
 
 <p>Recipe by:</p>
-<p><% @contributor.name %>
+<p><%= @contributor.name %><p>
