--- a/app/views/contributors/new.html.erb
+++ b/app/views/contributors/new.html.erb
@@ -13,6 +13,7 @@
   <input id='contributor_title' name='contributor[title]' type='text' value='<%= @contributor.title %>'>
   <label for='contributor_name'>Author Name</label>
   <input id='contributor_name' name='contributor[name]' type='text' value='<%= @contributor.name %>'>
+  <input type='hidden'>
   <button>Submit Your Recipe</button>
 </form>
 
