add update functionality to the app

--- a/app/views/contributors/_textarea.html.erb
+++ b/app/views/contributors/_textarea.html.erb
@@ -1,1 +1,1 @@
-<textarea form='contributor_new' name='contributor[recipe]'></textarea>
+<textarea form='contributor' name='contributor[recipe]'></textarea>
