--- a/app/views/contributors/new.html.erb
+++ b/app/views/contributors/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= render('layouts/errors', :object => @contributor) %>
 
-<form action="/contributors" method='post' id='contributor_new'>
+<form action="/contributors" method='post' id='contributor'>
   <%= render('form') %>
   <button>Submit Your Recipe</button>
 </form>
