add maneuverability around the app

--- a/app/views/contributors/edit.html.erb
+++ b/app/views/contributors/edit.html.erb
@@ -11,3 +11,6 @@
 </form>
 
 <%= render('textarea') %>
+
+<p><a href="/contributors/<%= @contributor.id %>">Return to recipe</a></p>
+<p><a href="/contributors">Return to main menu</a></p>
