--- a/app/views/contributors/show.html.erb
+++ b/app/views/contributors/show.html.erb
@@ -6,3 +6,6 @@
 
 <p>Recipe by:</p>
 <p><%= @contributor.name %><p>
+
+<p><a href="/contributors/<%= @contributor.id %>/edit">Edit this recipe</a></p>
+<p><a href="/contributors">Return to main menu</a></p>
