--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,2 +1,2 @@
 <label for='tag_name'>Tag</label>
-<input id='tag_name' name='tag[name]' type='text'>
+<input id='tag_name' name='tag[name]' type='text' value='<%= @tag.name %>'>
