--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,4 +2,12 @@
 
 <h1>Tag</h1>
 
+<p><%= @tag.name %></p>
 
+<p><a href="/tags">Return to main menu</a></p>
+<p><a href="/tags/new">Create a new tag</a></p>
+<p><a href="/tags/<%= @tag.id %>/edit">Edit this tag</a></p>
+<p><a href="/tags/<%= @tag.id %>"
+      data-confirm='Are you sure you want to delete this tag?'
+      data-method='delete'
+      rel='nofollow'>Delete this tag</a></p>
