--- a/app/views/contributors/show.html.erb
+++ b/app/views/contributors/show.html.erb
@@ -8,4 +8,9 @@
 <p><%= @contributor.name %><p>
 
 <p><a href="/contributors/<%= @contributor.id %>/edit">Edit this recipe</a></p>
+<p><a href="/contributors/new">Add a new recipe</a></p>
 <p><a href="/contributors">Return to main menu</a></p>
+<p><a href="/contributors/<%= @contributor.id %>"
+      data-confirm='Are you sure you want to delete this recipe>'
+      data-method='delete'
+      rel='nofollow'>Delete this recipe</a></p>
