add a success page when a recipe has been tagged

--- a/app/views/taggables/new.html.erb
+++ b/app/views/taggables/new.html.erb
@@ -6,16 +6,15 @@
 
 <p>Add a tag</p>
 
-<select form='taggable'>
+<select name='taggable[tag_id]' form='taggable'>
   <option value=''>Add a tag</option>
   <% @tag.each do |tag| %>
-    <option value='<% tag.id %>'><%= tag.name %></option>
+    <option value='<%= tag.id %>'><%= tag.name %></option>
   <% end %>
 </select>
 
-<form id='taggable' action="/contributors/:id" method='post' >
-  <input id='taggable_contributor' name='taggable[contributor_id]' type='hidden'>
-  <input id='taggable_tag' name='taggable[tag_id]' type='hidden'>
+<form id='taggable' action="/contributors/<%= @contributor.id %>/success" method='post' >
+  <input id='taggable_contributor' name='taggable[contributor_id]' type='hidden' value='<%= @contributor.id %>'>
   <button>Add tag</button>
 </form>
 
